# Multi-Agent-Meeting-Scheduler

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/transcripts/: jh8qggsro6p9vq34s3g3r4c9g8_transcript.txt
src/: config.py  main.py
src/agents/calendar_agent/: calendar_agent.py  entry.py  google_calendar_service.py
src/agents/host_agent/: entry.py  orchestrator.py
src/agents/scheduler_agent/: entry.py  scheduler_agent.py
src/utilities/: agent_registry.json
