[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event_scheduler_multi-agent"
version = "0.1.0"
description = "A multi-agent meeting scheduler using A2A protocol"
authors = [
    {name = "Shreyans Jain", email = "jain.shreyans03@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "pytz"
]

[tool.setuptools]
packages = ["agents"]